# notebooks

./: .gitignore  .notebook_notes.json  ACCOMPLISHMENTS.md  Causal_Attention.ipynb  ConstructorTheory.ipynb  FibonacciNetwork.ipynb  Fractal_Interp_Functions.ipynb  Hierarchies_in_Spacetime_.ipynb  Indivisible_Stochastic_Proccesses.ipynb  Layer_Norm_Normalization.ipynb  README.md  Spacetime+Lorentz.ipynb  Stochastic_Quantum_Simulation_with_Interaction_Nets_.ipynb  Vec2Vec.ipynb  bendingattention.py  best_causal_model.pth  combined.py  curved_concept_spacetime.py  enc2dec.py  enjoy.md  enjoy.py  main.py  masked_attention_events.csv  newfile.py  predictingfib.ipynb  ps.ipynb  pyproject.toml  simulating_time_with_square_root_space.py  spacetime_physics.py  spin_prime_wordnet.ipynb  string_theory.py  testing.py  time_aware_attention.py  todo.md  train_causal_model.py
.ipynb_checkpoints/: Simulating_Time_With_Square_Root_Space-checkpoint.ipynb
Attention/: Causal_Attention.ipynb
Stochasticity/: Indivisible_Stochastic_Proccesses.ipynb  README.md
TODO/: anotherone.py  any1.py  bendingattention.py  combined.py  curved_concept_spacetime.py  enc2dec.py  enjoy.py  newfile.py  normalizingflows.py  ps.ipynb  simulating_time_with_square_root_space.py  spacetime_physics.py  testing.py  train_causal_model.py
attention/: ConstructorTheory.ipynb  SpatialRGAEG.py  bendingattention.py
data/: attention_events.csv  circular_intervals_analysis.csv  llm_head_entropy.csv  llm_masked_heads.csv  llm_top_entropy_heads.csv
gravityModels/: VZController.py  blackHoleAttention.ipynb  curvedSpace.py  geodesicBeamSearch.py  graphCurve.ipynb  gravityCPT.py  gravityGeodesics.py  learnedPhi.py  minkowskiComputation.py  schrodingersGeodesic.py  semanticSpacetime.py
hamiltonian/: hamiltonianNN.py
heapAbstract/: main.py
latentspaces/: Hierarchies_in_Spacetime_.ipynb
neuralNetworks/: Vec2Vec.ipynb  predictingfib.ipynb  primeTwistEncoder.py  spin_prime_wordnet.ipynb
neuralnetworks/: FibonacciNetwork.ipynb  README.md
normalizingFlows/: normalizingflows.py  odeCode.py
outputs/: best_causal_model.pth  trefoil_intervals_analysis.csv
rgAeg/: rgAegAttention.py  su2.py  (+1 more)
(+18 files in other folders)
