[project]
name = "notebooks"
version = "0.1.0"
description = "Dependencies for Notebooks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "gymnasium>=1.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "nflows>=0.14",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pydot>=4.0.0",
    "pyqt5>=5.15.11",
    "pyswarms>=1.3.0",
    "pytest>=8.4.0",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "textblob>=0.19.0",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.22.0",
    "transformers>=4.52.3",
]


[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.isort]
known-first-party = ["notebooks"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=notebooks"

